--- a/static/css/base.css
+++ b/static/css/base.css
@@ -185,6 +185,10 @@ input[name='q']::placeholder {
 
 /* -------------------------------- All auth */
 
+.lost{
+    padding-top: 4.5rem;
+}
+
 
 .display{
     padding-top: 3.5rem;
