--- a/contact/templates/contact.html
+++ b/contact/templates/contact.html
@@ -5,46 +5,45 @@
     <div class="container header-container">
         <div class="row">
             <div class="col">
-                
             </div>
         </div>
     </div>
 {% endblock %}
 
 {% block content %}
-
-<form class="display">
-    <div class="row justify-content-md-center">
-        <div class="form-group col col-lg-2">
-        <label for="exampleFormControlInput1">Email address</label>
-        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+<div class="overlay"></div>
+    <div class="container-fluid product-page">
+        <div class="row">
+            <div class="col text-center mt-3">
+                <h2 class="logo-font">Contact Us</h2>
+                <hr class="w-100">
+            </div>
         </div>
+<form class="display" method="post" action="#">
+    <div class="row">
+        <div class="col">
+      <label for="exampleFormControlInput1">Email address</label>
+      <input type="email" name="contact_email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+      </div>
     </div>
-    <div class="form-group col-6">
-      <label for="exampleFormControlSelect1">Example select</label>
-      <select class="form-control" id="exampleFormControlSelect1">
-        <option>1</option>
-        <option>2</option>
-        <option>3</option>
-        <option>4</option>
-        <option>5</option>
-      </select>
+        <div class="row">
+          <div class="col">
+            <label for="fname">First Name</label>
+            <input type="text" name="first_name" class="form-control" id="fname" placeholder="First name">
+          </div>
+          <div class="col">
+            <label for="sname">Surname</label>
+            <input type="text" name="second_name" class="form-control" id="sname" placeholder="Surname">
+          </div>
+        </div>
+    <div class="row">
+        <div class="col">
+      <label for="exampleFormControlTextarea1">Your Message</label>
+      <textarea class="form-control" name="subject" id="exampleFormControlTextarea1" placeholder="Write your message to EXECUStore here" rows="8"></textarea>
     </div>
-    <div class="form-group">
-      <label for="exampleFormControlSelect2">Example multiple select</label>
-      <select multiple class="form-control" id="exampleFormControlSelect2">
-        <option>1</option>
-        <option>2</option>
-        <option>3</option>
-        <option>4</option>
-        <option>5</option>
-      </select>
     </div>
-    <div class="form-group">
-      <label for="exampleFormControlTextarea1">Example textarea</label>
-      <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+</form>
     </div>
-  </form>
 
 
 {% endblock %}
